Task Android Solution

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,50 +17,47 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.124"
+        app:layout_constraintHorizontal_bias="0.052"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.04" />
-
-    <Button
-        android:id="@+id/trueanswer"
-        android:layout_width="120dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="16dp"
-        android:text="True"
-        app:layout_constraintBaseline_toBottomOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/falseanswer" />
+        app:layout_constraintVertical_bias="0.022" />
 
     <Button
         android:id="@+id/falseanswer"
-        android:layout_width="120dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="176dp"
+        android:layout_height="67dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="11dp"
         android:text="False"
         app:layout_constraintBaseline_toBottomOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/trueanswer"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/trueanswer"
+        android:layout_width="176dp"
+        android:layout_height="67dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="11dp"
+        android:text="True"
+        app:layout_constraintBaseline_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toEndOf="@+id/nextQ"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        tools:ignore="DuplicateIds" />
 
     <TextView
         android:id="@+id/correctTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="220dp"
+        android:layout_height="200dp"
         android:background="@drawable/green"
         android:fallbackLineSpacing="false"
         android:hapticFeedbackEnabled="false"
+        android:padding="200px"
         android:text="Correct Answer"
         android:textAlignment="center"
-        android:textColor="#f3f4f1"
-        android:textSize="20sp"
+        android:textColor="#000000"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -73,30 +70,31 @@
         app:layout_constraintVertical_bias="0.332" />
 
     <Button
-        android:id="@+id/nextQ"
-        android:layout_width="316dp"
-        android:layout_height="78dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="165dp"
-        android:layout_marginEnd="30dp"
-        android:text="next question"
+        android:id="@+id/nextQuestion"
+        android:layout_width="387dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="11dp"
+        android:text="Next Question"
+        android:textSize="16sp"
         android:visibility="invisible"
         app:layout_constraintBaseline_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/falseanswer"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/correctTextView" />
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/WrongTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="220dp"
+        android:layout_height="200dp"
         android:background="@drawable/red"
         android:backgroundTint="#fc393e"
+        android:padding="200px"
         android:text="Wrong Answer"
         android:textAlignment="center"
-        android:textColor="#f3f4f1"
+        android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="gone"
@@ -104,9 +102,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.532"
         app:layout_constraintStart_toStartOf="parent"
+
+
         app:layout_constraintTop_toTopOf="parent"
-
-
         app:layout_constraintVertical_bias="0.332" />
 
     <androidx.constraintlayout.widget.Group
@@ -121,7 +119,7 @@
         android:layout_height="wrap_content"
         android:text="Total Grades"
         android:textColor="#9C27B0"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -129,6 +127,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.121" />
+
+    <TextView
+        android:id="@+id/Thanks"
+        android:layout_width="228dp"
+        android:layout_height="131dp"
+        android:text="Good Job!"
+        android:textColor="#9C27B0"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.697" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
